/*
 * Copyright 2021 Harness Inc. All rights reserved.
 * Use of this source code is governed by the PolyForm Shield 1.0.0 license
 * that can be found in the licenses directory at the root of this repository, also available at
 * https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.
 */

import React from 'react'
import { render, fireEvent, act } from '@testing-library/react'

import { Select, SelectOption } from './Select'

import data from '../../_stories/components/pokedex.json'

const items: SelectOption[] = data
  .map(row => ({
    label: row.name,
    value: row.id
  }))
  .slice(0, 20)

describe('<Select/> tests', () => {
  beforeAll(() => {
    jest.useFakeTimers()
  })

  test('works with static data', () => {
    const { container } = render(<Select items={items} />)

    expect(container).toMatchSnapshot()

    const input = container.querySelector('.bp4-input')

    expect(input).toBeDefined()
  })

  test('works with async data', async () => {
    const TIMEOUT = 5000
    const asyncData = () => {
      return new Promise<SelectOption[]>(resolve => {
        setTimeout(() => {
          resolve(items)
        }, TIMEOUT)
      })
    }
    const { container, queryByText } = render(<Select items={asyncData} />)
    expect(container).toMatchSnapshot()

    const input = container.querySelector('.bp4-input')!

    expect(input).toBeDefined()
    fireEvent.focus(input)

    expect(container).toMatchSnapshot('Loading state')
    expect(queryByText('Loading results...')).toBeDefined()

    await act(() => {
      jest.runTimersToTime(TIMEOUT)

      return Promise.resolve()
    })

    // expect(container).toMatchSnapshot('Final state')
    expect(container.querySelectorAll('li.menuItem').length).toBe(items.length)
  })

  test('basic filter works', () => {
    const { container } = render(<Select items={items} />)
    const input = container.querySelector('.bp4-input')!

    fireEvent.focus(input)

    expect(container).toMatchSnapshot('Initial Menu')
    expect(container.querySelectorAll('li.menuItem').length).toBe(items.length)

    fireEvent.change(input, { target: { value: 'cha' } })

    expect(container).toMatchSnapshot('Filtered Menu')
    expect(container.querySelectorAll('.menuItemLabel').length).toBe(3)
  })

  test('no matching results', () => {
    const { container, queryByText } = render(<Select items={items} />)
    const input = container.querySelector('.bp4-input')!

    fireEvent.focus(input)

    expect(container.querySelectorAll('li.menuItem').length).toBe(items.length)

    fireEvent.change(input, { target: { value: 'abcde' } })

    expect(container).toMatchSnapshot('Filtered Menu')
    expect(queryByText('No matching results found')).toBeDefined()
  })

  test('onChange', () => {
    const onChange = jest.fn()
    const { container, queryByText } = render(<Select items={items} onChange={onChange} />)
    const input = container.querySelector('.bp4-input')!

    fireEvent.focus(input)
    fireEvent.change(input, { target: { value: 'char' } })

    const pokemon = items.find(item => item.label === 'Charizard')
    const opt = queryByText(pokemon!.label)
    expect(opt).toBeDefined()

    if (opt) {
      fireEvent.click(opt)
      expect(onChange).toHaveBeenCalledWith(pokemon)
    }
  })
})
